--- a/TST/UI/Unit1.lfm
+++ b/TST/UI/Unit1.lfm
@@ -8,25 +8,14 @@ object Form1: TForm1
   ClientWidth = 320
   OnCreate = FormCreate
   LCLVersion = '2.0.0.2'
-  object Memo1: TMemo
-    Left = 0
-    Height = 218
-    Top = 249
-    Width = 320
-    Align = alBottom
-    Lines.Strings = (
-      'Memo1'
-    )
-    TabOrder = 0
-  end
-  object PageControl1: TPageControl
+  object PageControl1: TExtendedNotebook
     Left = 0
     Height = 218
     Top = 0
     Width = 320
-    ActivePage = TabSheet2
+    ActivePage = TabSheet1
     Align = alTop
-    TabIndex = 1
+    TabIndex = 0
     TabOrder = 1
     Visible = False
     OnChange = PageControl1Change
@@ -41,5 +30,23 @@ object Form1: TForm1
     object TabSheet3: TTabSheet
       Caption = 'TabSheet3'
     end
+  end
+  object ExtendedNotebook1: TExtendedNotebook
+    Left = 62
+    Height = 200
+    Top = 228
+    Width = 200
+    TabOrder = 2
+  end
+  object Memo1: TMemo
+    Left = 0
+    Height = 218
+    Top = 249
+    Width = 320
+    Align = alBottom
+    Lines.Strings = (
+      'Memo1'
+    )
+    TabOrder = 0
   end
 end
